--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <img class="profile" src="image/profile.jpg">
             <h1 id="headingtext" class="heading">"Good Morning" From Samnang Methiny</h1>
             <p class="paragraph">Art has been very well known to have unique effects on the human body, be it mentally or physically. In most cases, positive results occur to both viewers and also practitioners. Art has a variety of forms including music, culinary, architecture but for this particular article, we will be discussing on how paintings and drawing can be very beneficial to the human development.  </p>
+            <p class="paragraph">Art has been very well known to have unique effects on the human body, be it mentally or physically. In most cases, positive results occur to both viewers and also practitioners. Art has a variety of forms including music, culinary, architecture but for this particular article, we will be discussing on how paintings and drawing can be very beneficial to the human development.  </p>
             <div class="center gallery">
                 <img class="image" src="image/profile.jpg">
                 <img class="image" src="image/profile.jpg">
