--- a/about.html
+++ b/about.html
@@ -10,6 +10,9 @@
             <a href="about.html" >About</a>
             <a href="" >Blogs</a>
         </div>
-        About
+        <div>
+            <img class="fri" src="image/fri.jpg">
+
+        </div>
     </body>
 </html>
